# VideoNote

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: ai_client.py  whisper_client.py
backend/app/models/: schemas.py
backend/app/routers/: download.py  note.py  qa.py  settings.py  stt.py  transcribe.py  tts.py  video.py
backend/app/services/: download_service.py  note_service.py  qa_service.py  stt_service.py  transcribe_service.py  tts_service.py  video_service.py
backend/app/utils/: text.py  ytdlp.py
docs/: PRODUCT_DESIGN.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/api/: index.ts
frontend/src/assets/styles/: global.scss  variables.scss
frontend/src/components/layout/: AppHeader.vue  AppLayout.vue
frontend/src/composables/: useSSE.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/types/: index.ts
frontend/src/views/: Settings.vue  VideoDownload.vue  VideoNote.vue  VideoQA.vue
